fix: covered text

--- a/src/shared/components/layout/WeatherEffects/WeatherEffects.module.css
+++ b/src/shared/components/layout/WeatherEffects/WeatherEffects.module.css
@@ -298,7 +298,7 @@
     position: absolute;
     top: -400px;
     left: -400px;
-    width: 150vw;
+    width: 1920px;
     height: 1600px;
     background: radial-gradient(
             circle at top left,
